k8s-manifests/dgva-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dgva-server-dev
  labels:
    environment: development
